...
            android:text="@{listItem.coorLong}"
            app:layout_constraintStart_toEndOf="@id/tvLat"
            app:layout_constraintTop_toTopOf="@id/tvLat"
            tools:text="22.1212" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="?listPreferredItemHeight"
            android:layout_height="?listPreferredItemHeight"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/history_title"
            android:onClick="@{() -> listItem.delete()}"
            android:scaleType="center"
...
